test/success/nostd/anf/sample1/main.sk
module Main {

fn foo(a: (), b: ()) {

}

fn main() {
    let a = {
        let b = ();
        foo((), b);
    };
}
}