test/errors/immutable_assign/main.sk
module Main {

fn main() {
    let s = "a";
    s = "b";
}

}